fix: add z-index property to navbar-container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@ a:hover {
     right: 0;
     background-color: var(--bg-accent);
     transition: all 0.5s ease-in-out;
+    z-index: 1;
 }
 
 #navbar-container-md {
